Updated configuration to include theme support from https://github.com/gpakosz/.tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 #
-# tmux configuration settings
+# Configuration file for tmux >= 2.4
 #
 #
 # @author paolodedios
@@ -12,8 +12,8 @@
 #
 # @see http://www.economyofeffort.com/
 #      2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
-# #see https://superuser.com/
-#      questions/1114694/on-macos-sierra-beta-5-using-iterm-2-and-tmux-i-have-lost-the-ability-to-copy-p
+# #see https://superuser.com/questions/1114694/
+#      on-macos-sierra-beta-5-using-iterm-2-and-tmux-i-have-lost-the-ability-to-copy-p
 ###############################################################################
 
 set-option -g default-shell $SHELL
@@ -29,6 +29,7 @@ set-option -g default-terminal "screen-256color"
 ###############################################################################
 # Turn on xterm-keys so that additional function keys get escape sequences
 ###############################################################################
+
 set-option -g xterm-keys on
 
 ###############################################################################
@@ -61,6 +62,9 @@ set-option -g set-titles on
 
 # window number,program name, active(or not)
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+
+# renumber windows when a window is closed
+set-option -g renumber-windows on
 
 ###############################################################################
 # Set status bar look and feel
@@ -99,6 +103,14 @@ set-option -g prefix C-x
 ###############################################################################
 
 set-option -g visual-activity on
+
+###############################################################################
+#
+# Ensure pane numbering is consistent with window numbering
+#
+###############################################################################
+
+set-window-option -g pane-base-index 1
 
 ###############################################################################
 # Set a visual signal if there is activity in a window
@@ -199,19 +211,29 @@ bind-key '"' choose-session
 # Navigate windows using 'h', 'l', and ctrl-h, ctrl-l (no prefix)
 ###############################################################################
 
-bind-key -r    h select-window -t :-
-bind-key -r    l select-window -t :+
-bind-key -nr C-h select-window -t :-
-bind-key -nr C-l select-window -t :+
+bind-key -r    h     select-window -t :-
+bind-key -r    l     select-window -t :+
+bind-key -nr C-h     select-window -t :-
+bind-key -nr C-l     select-window -t :+
+bind-key Tab         last-window
 
 ###############################################################################
 # Navigate panes using 'j', 'k', and ctrl-j, ctrl-k (no prefix)
 ###############################################################################
 
-bind-key -r    j select-pane -t :.-
-bind-key -r    k select-pane -t :.+
-bind-key -nr C-j select-pane -t :.-
-bind-key -nr C-k select-pane -t :.+
+bind-key -r    j     select-pane -t :.-  # cycle counter-clockwise
+bind-key -r    k     select-pane -t :.+  # cycle clockwise
+bind-key -nr C-j     select-pane -t :.-  # cycle counter-clockwise
+bind-key -nr C-k     select-pane -t :.+  # cycle clockwise
+
+###############################################################################
+# Navigate panes using ctrl-arrow keys (no prefix)
+###############################################################################
+
+bind-key -nr C-Up    select-pane -U     # move up
+bind-key -nr C-Down  select-pane -D     # move down
+bind-key -nr C-Left  select-pane -L     # move left
+bind-key -nr C-Right select-pane -R     # move right
 
 ###############################################################################
 # Resize pane with Shift-[arrow keys]
@@ -222,35 +244,35 @@ bind-key -nr C-k select-pane -t :.+
 # @see mouse mode resizing
 ###############################################################################
 
-bind-key -r S-Left  resize-pane -L 2
-bind-key -r S-Right resize-pane -R 2
-bind-key -r S-Down  resize-pane -D 2
-bind-key -r S-Up    resize-pane -U 2
+bind-key -r S-Left   resize-pane -L 2
+bind-key -r S-Right  resize-pane -R 2
+bind-key -r S-Down   resize-pane -D 2
+bind-key -r S-Up     resize-pane -U 2
 
 ###############################################################################
 # Swap panes
+#
+# '>' : Swap current pane with the next one
+# '<' : Swap current pane with the previous one
+#
 ###############################################################################
 
 unbind-key "C-o"
-bind-key -r J swap-pane -D
-bind-key -r K swap-pane -U
+bind-key -r >  swap-pane -D
+bind-key -r <  swap-pane -U
 
 ###############################################################################
 # Enable/disable mouse mode to select and resize panes
 ###############################################################################
 
-# Toggle mouse on with C-x m
-bind-key m set-option -g mouse on  \; display-message 'Mouse: ON'
-
-# Toggle mouse off with C-x M
-bind-key M set-option -g mouse off \; display-message 'Mouse: OFF'
+# Toggle mouse on/off with C-x m
+bind-key m run 'cat ~/.tmux.conf.sh | sh -s tmux_wrapper_toggle_mouse'
 
 ###############################################################################
 # Copy and paste contents of paste buffer within pane or window
 ###############################################################################
 
 bind-key [ copy-mode
-bind-key ] paste-buffer -s \015
 
 ###############################################################################
 # List all paste buffers (default key is '#')
@@ -262,25 +284,36 @@ bind-key b list-buffers
 # Choose paste buffer to paste interactively (default key was '=')
 ###############################################################################
 
-bind-key p choose-buffer
+unbind-key =
+bind-key P choose-buffer
+
+###############################################################################
+# Choose/paste the top buffer from the paste buffer
+###############################################################################
+
+bind-key p paste-buffer -s \015
 
 ###############################################################################
 # Delete the most recently copied paste buffer of text (default key was '-')
 ###############################################################################
 
-bind-key x delete-buffer
+bind-key x delete-buffer \; display-message 'Deleted last paste buffer'
 
 ###############################################################################
 # Copy and paste using the vi key bindings. while in copy-mode:
 #   'v' will activate highlighting
 #   'y' will capture the highlighted string
 #
-# vi-mode key bindings also allow selection with [SPACE] and capture
+# vi-mode key bindings also activate hightlighting with [SPACE] and capture
 # with the [ENTER] key
 ###############################################################################
 
 bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi H send -X start-of-line
+bind-key -T copy-mode-vi L send -X end-of-line
+bind-key -T copy-mode-vi Escape send -X cancel
 
 ###############################################################################
 # Mouse mode copy and paste shortcuts
@@ -299,7 +332,42 @@ bind-key -n WheelUpPane if-shell -F -t = \
 bind-key -n WheelDownPane select-pane -t = \; send-keys -M
 
 ###############################################################################
+# The 'f' key is bound by default to 'find and switch' to an existing
+# window.  Bind 'Ctrl-f' to find and switch to another tmux session
+###############################################################################
+
+bind-key C-f command-prompt -p find-session "switch-client -t %%"
+
+###############################################################################
 # Bind 'S' to prompt for a host name for SSH
 ###############################################################################
 
 bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
+
+###############################################################################
+# Bind 'U' to the urlview command
+###############################################################################
+
+bind-key U run "cat ~/.tmux.conf | sh -s tmux_wrapper_urlview #{pane_id}"
+
+###############################################################################
+# Bind 'F' to the Facebook path picker command
+###############################################################################
+
+bind-key F run "cat ~/.tmux.conf | sh -s tmux_wrapper_fpp #{pane_id}"
+
+###############################################################################
+#
+# Load override options for tmux versions < 2.4
+#
+###############################################################################
+
+if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+
+###############################################################################
+#
+# Apply configuration and status line theme overrides
+#
+###############################################################################
+
+run 'cat ~/.tmux.conf.sh | sh -s tmux_wrapper_apply_configuration'
