--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,23 @@
 ###############################################################################
 
 ###############################################################################
+#
+# Set plugin PATH for tmux plugin manager
+#
+###############################################################################
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "${HOME}/.tmux.d/plugins/"
+
+###############################################################################
+#
+# Set custom theme path
+#
+###############################################################################
+
+set-environment -g TMUX_THEME_FILE "${HOME}/.tmux.d/theme/custom.tmuxtheme"
+set-environment -g TMUX_THEME_CONFIG_FILE "$HOME/.tmux.d/theme/custom.conf"
+
+###############################################################################
 # On Mac OS X, launch reattach-to-user-namespace to enable process launching
 # and have that process be attached to the per-user bootstrap namespace
 #
@@ -61,7 +78,7 @@ set-option -g base-index 1
 set-option -g set-titles on
 
 # window number,program name, active(or not)
-set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+set-option -g set-titles-string "#H:#S.#I.#P #W #T"
 
 # renumber windows when a window is closed
 set-option -g renumber-windows on
@@ -80,8 +97,8 @@ set-option -g status-bg black
 set-option -g status-fg white
 set-option -g status-attr bright
 
-set-option -g status-right '#[fg=yellow]#(uptime | cut -d " " -f 4-)'
-set-option -g status-left  '#[fg=green]#H[#S] '
+set-option -g status-right "#[fg=yellow]#(uptime | cut -d ' ' -f 4-)"
+set-option -g status-left  "#[fg=green]#H[#S] "
 
 ###############################################################################
 # Command message line colors
@@ -162,7 +179,7 @@ set-window-option -g automatic-rename
 # reload configuration file
 ###############################################################################
 
-bind-key ! source-file ~/.tmux.conf ; display-message 'Reloaded ~/.tmux.conf'
+bind-key ! source-file ~/.tmux.conf ; display-message "Reloaded ~/.tmux.conf"
 
 ###############################################################################
 # Rebind the split window keys
@@ -297,7 +314,7 @@ bind-key p paste-buffer -s \015
 # Delete the most recently copied paste buffer of text (default key was '-')
 ###############################################################################
 
-bind-key x delete-buffer \; display-message 'Deleted last paste buffer'
+bind-key x delete-buffer \; display-message "Deleted last paste buffer"
 
 ###############################################################################
 # Copy and paste using the vi key bindings. while in copy-mode:
@@ -348,13 +365,13 @@ bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 # Bind 'U' to the urlview command
 ###############################################################################
 
-bind-key U run "cat ~/.tmux.conf | sh -s tmux_wrapper_urlview #{pane_id}"
+bind-key U run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_urlview #{pane_id}'
 
 ###############################################################################
 # Bind 'F' to the Facebook path picker command
 ###############################################################################
 
-bind-key F run "cat ~/.tmux.conf | sh -s tmux_wrapper_fpp #{pane_id}"
+bind-key F run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_fpp #{pane_id}'
 
 ###############################################################################
 #
@@ -362,7 +379,7 @@ bind-key F run "cat ~/.tmux.conf | sh -s tmux_wrapper_fpp #{pane_id}"
 #
 ###############################################################################
 
-if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+if "[ -f ${TMUX_THEME_CONFIG_FILE} ]" 'source ${TMUX_THEME_CONFIG_FILE}'
 
 ###############################################################################
 #
@@ -370,4 +387,12 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 #
 ###############################################################################
 
-run 'cat ~/.tmux.conf.sh | sh -s tmux_wrapper_apply_configuration'
+run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_apply_configuration'
+
+###############################################################################
+#
+# Load tmux plugin system
+#
+###############################################################################
+
+run '~/.tmux.d/plugins/tpm/tpm'
