Enable tmux plugin manager

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,15 @@ set-environment -g TMUX_THEME_FILE "${HOME}/.tmux.d/theme/custom.tmuxtheme"
 set-environment -g TMUX_THEME_CONFIG_FILE "$HOME/.tmux.d/theme/custom.conf"
 
 ###############################################################################
+#
+# Load TPM plugins
+# @see https://github.com/tmux-plugins/tpm
+#
+###############################################################################
+
+set -g @plugin "tmux-plugins/tpm"
+
+###############################################################################
 # On Mac OS X, launch reattach-to-user-namespace to enable process launching
 # and have that process be attached to the per-user bootstrap namespace
 #
@@ -395,4 +404,4 @@ run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_apply_configuration'
 #
 ###############################################################################
 
-run '~/.tmux.d/plugins/tpm/tpm'
+run '${HOME}/.tmux.d/plugins/tpm/tpm'
