--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,14 +93,17 @@ set-option -g set-titles-string "#H:#S.#I.#P #W #T"
 set-option -g renumber-windows on
 
 ###############################################################################
-# Set status bar look and feel
+# Enable status line
 ###############################################################################
 
 set-option -g status on
 set-option -g status-left-length  60
 set-option -g status-right-length 60
-
 set-option -g status-interval 2
+
+###############################################################################
+# Set default status bar look and feel
+###############################################################################
 
 set-option -g status-bg black
 set-option -g status-fg white
@@ -176,7 +179,6 @@ set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-fg white
 set-window-option -g window-status-bg black
 set-window-option -g window-status-attr dim
-
 
 ###############################################################################
 # Automatically set window title to the current process
@@ -384,7 +386,15 @@ bind-key F run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_fpp #{pane_id}'
 
 ###############################################################################
 #
-# Load override options for tmux versions < 2.4
+# Load tpm and tmux plugins
+#
+###############################################################################
+
+run '${HOME}/.tmux.d/plugins/tpm/tpm'
+
+###############################################################################
+#
+# Load custom theme options
 #
 ###############################################################################
 
@@ -397,11 +407,3 @@ if "[ -f ${TMUX_THEME_CONFIG_FILE} ]" 'source ${TMUX_THEME_CONFIG_FILE}'
 ###############################################################################
 
 run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_apply_configuration'
-
-###############################################################################
-#
-# Load tmux plugin system
-#
-###############################################################################
-
-run '${HOME}/.tmux.d/plugins/tpm/tpm'
