--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "${HOME}/.tmux.d/plugins/"
 ###############################################################################
 
 set-environment -g TMUX_THEME_FILE "${HOME}/.tmux.d/theme/custom.tmuxtheme"
-set-environment -g TMUX_THEME_CONFIG_FILE "$HOME/.tmux.d/theme/custom.conf"
+set-environment -g TMUX_THEME_CONFIG_FILE "${HOME}/.tmux.d/theme/custom.conf"
 
 ###############################################################################
 #
@@ -31,6 +31,27 @@ set-environment -g TMUX_THEME_CONFIG_FILE "$HOME/.tmux.d/theme/custom.conf"
 ###############################################################################
 
 set -g @plugin "tmux-plugins/tpm"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+###############################################################################
+#
+# TPM plugin configuration
+#
+###############################################################################
+
+# Specify preferred tmux-ressurect save directory
+# @see https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/save_dir.md
+set -g @resurrect-dir '~/.tmux.d/ressurect'
+
+# Enable restoration of pane contents
+# @see https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/restoring_pane_contents.md
+set -g @resurrect-capture-pane-contents 'on'
+
+# Enable automatic restore of last saved environment when tmux server starts
+# @see https://github.com/tmux-plugins/tmux-continuum
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
 
 ###############################################################################
 # On Mac OS X, launch reattach-to-user-namespace to enable process launching
@@ -294,7 +315,7 @@ bind-key -r <  swap-pane -U
 ###############################################################################
 
 # Toggle mouse on/off with C-x m
-bind-key m run 'cat ~/.tmux.conf.sh | sh -s tmux_wrapper_toggle_mouse'
+bind-key m run-shell 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_toggle_mouse'
 
 ###############################################################################
 # Copy and paste contents of paste buffer within pane or window
@@ -360,8 +381,8 @@ bind-key -n WheelUpPane if-shell -F -t = \
 bind-key -n WheelDownPane select-pane -t = \; send-keys -M
 
 ###############################################################################
-# The 'f' key is bound by default to 'find and switch' to an existing
-# window.  Bind 'Ctrl-f' to find and switch to another tmux session
+# The 'f' key is bound by default to 'find and switch' to an existing window.
+# Bind 'Ctrl-f' to find and switch to another tmux session
 ###############################################################################
 
 bind-key C-f command-prompt -p find-session "switch-client -t %%"
@@ -376,13 +397,13 @@ bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 # Bind 'U' to the urlview command
 ###############################################################################
 
-bind-key U run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_urlview #{pane_id}'
+bind-key U run-shell 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_urlview #{pane_id}'
 
 ###############################################################################
 # Bind 'F' to the Facebook path picker command
 ###############################################################################
 
-bind-key F run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_fpp #{pane_id}'
+bind-key F run-shell 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_fpp #{pane_id}'
 
 ###############################################################################
 #
@@ -390,7 +411,9 @@ bind-key F run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_fpp #{pane_id}'
 #
 ###############################################################################
 
-run '${HOME}/.tmux.d/plugins/tpm/tpm'
+run-shell '${HOME}/.tmux.d/plugins/tpm/tpm'
+run-shell '${HOME}/.tmux.d/plugins/tmux-ressurect/ressurect.tmux'
+run-shell '${HOME}/.tmux.d/plugins/tmux-continuum/continuum.tmux'
 
 ###############################################################################
 #
@@ -406,4 +429,4 @@ if "[ -f ${TMUX_THEME_CONFIG_FILE} ]" 'source ${TMUX_THEME_CONFIG_FILE}'
 #
 ###############################################################################
 
-run 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_apply_configuration'
+run-shell 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_apply_configuration'
