--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,8 +31,8 @@ set-environment -g TMUX_THEME_CONFIG_FILE "${HOME}/.tmux.d/theme/custom.conf"
 ###############################################################################
 
 set -g @plugin "tmux-plugins/tpm"
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin "tmux-plugins/tmux-resurrect"
+set -g @plugin "tmux-plugins/tmux-continuum"
 
 ###############################################################################
 #
