Fixed script loading for tmux-resurrect and tmux-cotninuum

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,9 +30,9 @@ set-environment -g TMUX_THEME_CONFIG_FILE "${HOME}/.tmux.d/theme/custom.conf"
 #
 ###############################################################################
 
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-resurrect"
-set -g @plugin "tmux-plugins/tmux-continuum"
+set-option -g @plugin "tmux-plugins/tpm"
+set-option -g @plugin "tmux-plugins/tmux-resurrect"
+set-option -g @plugin "tmux-plugins/tmux-continuum"
 
 ###############################################################################
 #
@@ -42,16 +42,17 @@ set -g @plugin "tmux-plugins/tmux-continuum"
 
 # Specify preferred tmux-ressurect save directory
 # @see https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/save_dir.md
-set -g @resurrect-dir '~/.tmux.d/ressurect'
+set-option -g @resurrect-dir '~/.tmux.d/resurrect'
 
 # Enable restoration of pane contents
-# @see https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/restoring_pane_contents.md
-set -g @resurrect-capture-pane-contents 'on'
+# @see https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs
+#      /restoring_pane_contents.md
+set-option -g @resurrect-capture-pane-contents 'on'
 
 # Enable automatic restore of last saved environment when tmux server starts
 # @see https://github.com/tmux-plugins/tmux-continuum
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '15'
+set-option -g @continuum-restore 'on'
+set-option -g @continuum-save-interval '15'
 
 ###############################################################################
 # On Mac OS X, launch reattach-to-user-namespace to enable process launching
@@ -412,8 +413,19 @@ bind-key F run-shell 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_fpp #{pane_id}
 ###############################################################################
 
 run-shell '${HOME}/.tmux.d/plugins/tpm/tpm'
-run-shell '${HOME}/.tmux.d/plugins/tmux-ressurect/ressurect.tmux'
+run-shell '${HOME}/.tmux.d/plugins/tmux-resurrect/resurrect.tmux'
 run-shell '${HOME}/.tmux.d/plugins/tmux-continuum/continuum.tmux'
+
+###############################################################################
+#
+# Workaround for MacOS Yosemite specific issue:
+# @see https://github.com/tmux-plugins/tmux-continuum/issues/1
+# @see https://stackoverflow.com/questions/28652066
+#      /backgrounding-a-process-with-ampersand-does-not-work-in-bash
+#
+###############################################################################
+
+run-shell -b '${HOME}/.tmux.d/plugins/tmux-continuum/scripts/continuum_restore.sh'
 
 ###############################################################################
 #
