Implemented loadavg_full for 1m, 5m, 15m load average information

--- a/.tmux.d/theme/custom.conf
+++ b/.tmux.d/theme/custom.conf
@@ -170,9 +170,13 @@ tmux_conf_theme_right_separator_sub=''
 #     - #{username}
 #     - #{username_ssh}
 #
-tmux_conf_theme_status_left=' ❐ #{circled_session_name} | ↑#{?uptime_d, #{uptime_d}d,}#{?uptime_h, #{uptime_h}h,}#{?uptime_m, #{uptime_m}m,} '
-tmux_conf_theme_status_right='#{prefix}#{pairing} , %b %d , %R | #{username}#{root} | #{hostname} '
+tmux_conf_theme_status_left=' ❐ #{circled_session_name} | #{loadavg_full} '
+tmux_conf_theme_status_right='#{prefix}#{pairing} , %b %d , %R | ↑#{?uptime_d, #{uptime_d}d,}#{?uptime_h, #{uptime_h}h,}#{?uptime_m, #{uptime_m}m,} | #{username}#{root} | #{hostname} '
+
+# Right status line with battery indicator
+#
 #tmux_conf_theme_status_right='#{prefix}#{pairing} #{?battery_status, #{battery_status},}#{?battery_bar, #{battery_bar},}#{?battery_percentage, #{battery_percentage},} , %b %d , %R | #{username}#{root} | #{hostname} '
+#
 
 # Left status line style
 tmux_conf_theme_status_left_fg='#000000,#e4e4e4,#e4e4e4'  # black, white, white
@@ -180,9 +184,9 @@ tmux_conf_theme_status_left_bg='#ffff00,#ff00af,#00afff'  # yellow, pink, white 
 tmux_conf_theme_status_left_attr='bold,none,none'
 
 # Right status line style
-tmux_conf_theme_status_right_fg='#8a8a8a,#e4e4e4,#000000' # light gray, white, black
-tmux_conf_theme_status_right_bg='#080808,#d70000,#e4e4e4' # dark gray, red, white
-tmux_conf_theme_status_right_attr='none,none,bold'
+tmux_conf_theme_status_right_fg='#8a8a8a,#40092b,#e4e4e4,#000000' # light gray, dark purple, white, black
+tmux_conf_theme_status_right_bg='#080808,#00d76c,#d70000,#e4e4e4' # dark gray, green, red, white
+tmux_conf_theme_status_right_attr='none,none,none,bold'
 
 # Pairing indicator
 tmux_conf_theme_pairing='👓'          # U+1F453
