Updated configuration comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,6 +114,12 @@ set-option -g set-titles-string "#H:#S.#I.#P #W #T"
 # renumber windows when a window is closed
 set-option -g renumber-windows on
 
+# Reduce escape/prefix time validity to make for faster command sequences
+set-option -s  escape-time 10
+
+# Increase command repeat timeout
+set-option -sg repeat-time 600
+
 ###############################################################################
 # Enable status line
 ###############################################################################
@@ -135,7 +141,7 @@ set-option -g status-right "#[fg=yellow]#(uptime | cut -d ' ' -f 4-)"
 set-option -g status-left  "#[fg=green]#H[#S] "
 
 ###############################################################################
-# Command message line colors
+# Set default command message line colors
 ###############################################################################
 
 set-option -g message-fg white
@@ -218,10 +224,11 @@ bind-key ! source-file ~/.tmux.conf ; display-message "Reloaded ~/.tmux.conf"
 # Rebind the split window keys
 ###############################################################################
 
-# Rebind split window
+# Rebind split-window -h
 unbind-key %
 bind-key \ split-window -h
 
+# Rebind split-window -v
 unbind-key '"'
 bind-key - split-window -v
 
