Rebind C-x in tmux to C-\ to prevent conflicts with emacs in terminal mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -150,10 +150,10 @@ set-option -g message-attr bright
 
 ###############################################################################
 # Change the command hot-key prefix to something that is
-# easier on the fingers (from C-a to C-x)
+# easier on the fingers (from C-a to C-\)
 ###############################################################################
 
-set-option -g prefix C-x
+set-option -g prefix "C-\\"
 
 ###############################################################################
 # Enable activity monitoring globally
@@ -234,7 +234,7 @@ bind-key - split-window -v
 
 
 ###############################################################################
-# C-x C-a for the Last Active Window
+# C-\ C-a for the Last Active Window
 ###############################################################################
 
 bind-key C-a last-window
@@ -322,7 +322,7 @@ bind-key -r <  swap-pane -U
 # Enable/disable mouse mode to select and resize panes
 ###############################################################################
 
-# Toggle mouse on/off with C-x m
+# Toggle mouse on/off with C-\ m
 bind-key m run-shell 'cat ${TMUX_THEME_FILE} | sh -s tmux_wrapper_toggle_mouse'
 
 ###############################################################################
