Added bindings for alt-left and alt-right

--- a/.inputrc
+++ b/.inputrc
@@ -82,3 +82,10 @@ set convert-meta off
 ########################################################################################
 
 "\e[3;3~": kill-word
+
+########################################################################################
+# Enable Alt-arrows, Alt-Left goes back and Alt-Right goes forward a word
+########################################################################################
+
+"\e[1;5D": backward-word
+"\e[1;5C": forward-word
