Added merge and diff preferences

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,4 +36,13 @@
    status            = auto
 
 [push]
+    # Change to match those with older versions of git 1.x.x
     default          = simple
+
+[merge]
+	# Include summaries of merged commits in newly created merge commit messages
+	log              = true
+
+[diff]
+	# Detect copies as well as renames
+	renames          = copies
