--- a/.tmux.d/theme/custom.conf
+++ b/.tmux.d/theme/custom.conf
@@ -257,6 +257,9 @@ tmux_conf_theme_clock_style='24'
 # In copy mode, copying selection also copies to the OS clipboard
 #   - true
 #   - false (default)
+#
+# on macOS, this requires installing reattach-to-user-namespace, see README.md
+# on Linux, this requires xsel or xclip.
 tmux_conf_copy_to_os_clipboard=true
 
 ###############################################################################
