Fixed macOS reference

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set-option -g @continuum-restore 'on'
 set-option -g @continuum-save-interval '15'
 
 ###############################################################################
-# On Mac OS X, launch reattach-to-user-namespace to enable process launching
+# On macOS, launch reattach-to-user-namespace to enable process launching
 # and have that process be attached to the per-user bootstrap namespace
 #
 # @see http://www.economyofeffort.com/
