--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,18 +54,7 @@ set-option -g @resurrect-capture-pane-contents 'on'
 set-option -g @continuum-restore 'on'
 set-option -g @continuum-save-interval '15'
 
-###############################################################################
-# On macOS, launch reattach-to-user-namespace to enable process launching
-# and have that process be attached to the per-user bootstrap namespace
-#
-# @see http://www.economyofeffort.com/
-#      2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
-# #see https://superuser.com/questions/1114694/
-#      on-macos-sierra-beta-5-using-iterm-2-and-tmux-i-have-lost-the-ability-to-copy-p
-###############################################################################
-
 set-option -g default-shell $SHELL
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 ###############################################################################
 # If you are using a 256 colour terminal, you will need to set the correct
@@ -367,7 +356,18 @@ bind-key x delete-buffer \; display-message "Deleted last paste buffer"
 
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi C-v send -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#
+# Delegate binding of platform specific operations such as:
+#
+#  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#
+# to custom.tmuxtheme#tmux_wrapper_apply_bindings to see if platform specific
+# programs such as pbcopy, reattach-to-user-namespace, or xsel exist.
+#
+# Default to copy-selection-and-cancel in case a platform specific version is
+# unavailable.
+#
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind-key -T copy-mode-vi H send -X start-of-line
 bind-key -T copy-mode-vi L send -X end-of-line
 bind-key -T copy-mode-vi Escape send -X cancel
