Added escape character to command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -207,7 +207,7 @@ set-window-option -g automatic-rename
 # reload configuration file
 ###############################################################################
 
-bind-key ! source-file ~/.tmux.conf ; display-message "Reloaded ~/.tmux.conf"
+bind-key ! source-file ~/.tmux.conf \; display-message "Reloaded ~/.tmux.conf"
 
 ###############################################################################
 # Rebind the split window keys
