--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,10 +103,19 @@ set-option -g set-titles-string "#H:#S.#I.#P #W #T"
 # renumber windows when a window is closed
 set-option -g renumber-windows on
 
-# Reduce escape/prefix time validity to make for faster command sequences
-set-option -s  escape-time 10
+#
+# Set the time in milliseconds for which tmux waits after an escape is input
+# to determine if it is part of a function or meta key sequences. The default
+# is 500 milliseconds.
+#
+# Reduce escape/prefix time validity to make for faster command sequences.
+set-option -s escape-time 10
 
-# Increase command repeat timeout
+#
+# Allow multiple commands to be entered without pressing the prefix-key again
+# in the specified time milliseconds. The default is 500.
+#
+# Increase command repeat timeout from the default.
 set-option -sg repeat-time 600
 
 ###############################################################################
@@ -254,32 +263,38 @@ bind-key "'" choose-window
 bind-key '"' choose-session
 
 ###############################################################################
-# Navigate windows using 'h', 'l', and ctrl-h, ctrl-l (no prefix)
+# Navigate windows using 'h', 'l'
+#
+# Note: Disabled ctrl-h, ctrl-l (no prefix) to enable emacs from within tmux
+# bind-key -r    C-h   select-window -t :- # cycle left
+# bind-key -r    C-l   select-window -t :+ # cycle right
+#
 ###############################################################################
 
-bind-key -r    h     select-window -t :-
-bind-key -r    l     select-window -t :+
-bind-key -nr C-h     select-window -t :-
-bind-key -nr C-l     select-window -t :+
+bind-key -r    h     select-window -t :- # cycle left
+bind-key -r    l     select-window -t :+ # cycle right
 bind-key Tab         last-window
 
 ###############################################################################
-# Navigate panes using 'j', 'k', and ctrl-j, ctrl-k (no prefix)
+# Navigate panes using 'j', 'k'
+#
+# Note: Disabled ctrl-h, ctrl-l (no prefix) to enable emacs from within tmux
+# bind-key -r    C-j   select-pane -t :.-  # cycle counter-clockwise
+# bind-key -r    C-k   select-pane -t :.+  # cycle clockwise
+#
 ###############################################################################
 
 bind-key -r    j     select-pane -t :.-  # cycle counter-clockwise
 bind-key -r    k     select-pane -t :.+  # cycle clockwise
-bind-key -nr C-j     select-pane -t :.-  # cycle counter-clockwise
-bind-key -nr C-k     select-pane -t :.+  # cycle clockwise
 
 ###############################################################################
 # Navigate panes using ctrl-arrow keys (no prefix)
 ###############################################################################
 
-bind-key -nr C-Up    select-pane -U     # move up
-bind-key -nr C-Down  select-pane -D     # move down
-bind-key -nr C-Left  select-pane -L     # move left
-bind-key -nr C-Right select-pane -R     # move right
+bind-key -nr C-Up    select-pane -U      # move up
+bind-key -nr C-Down  select-pane -D      # move down
+bind-key -nr C-Left  select-pane -L      # move left
+bind-key -nr C-Right select-pane -R      # move right
 
 ###############################################################################
 # Resize pane with Shift-[arrow keys]
@@ -373,7 +388,7 @@ bind-key -T copy-mode-vi L send -X end-of-line
 bind-key -T copy-mode-vi Escape send -X cancel
 
 ###############################################################################
-# Mouse mode copy and paste shortcuts
+# Mouse mode copy and paste shortcuts (no prefix)
 #
 # Start copy mode when scrolling up and exit when scrolling down to bottom.
 # The "#{mouse_any_flag}" check just sends scrolls to any program running that
