Instead of disabling C-h, C-l, C-j, C-k, make it conditional on foreground process

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -275,6 +275,15 @@ bind-key -r    h     select-window -t :- # cycle left
 bind-key -r    l     select-window -t :+ # cycle right
 bind-key Tab         last-window
 
+bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-h" "select-window -t :.-"
+bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-l" "select-window -t :.+"
+
+bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') = emacs ]" "send-keys C-h" "select-window -t :.-"
+bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') = emacs ]" "send-keys C-l" "select-window -t :.+"
+
+bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') = emacsclient ]" "send-keys C-h" "select-window -t :.-"
+bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') = emacsclient ]" "send-keys C-l" "select-window -t :.+"
+
 ###############################################################################
 # Navigate panes using 'j', 'k'
 #
@@ -286,6 +295,15 @@ bind-key Tab         last-window
 
 bind-key -r    j     select-pane -t :.-  # cycle counter-clockwise
 bind-key -r    k     select-pane -t :.+  # cycle clockwise
+
+bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-j" "select-pane -t :.-"
+bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-k" "select-pane -t :.+"
+
+bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') = emacs ]" "send-keys C-j" "select-pane -t :.-"
+bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') = emacs ]" "send-keys C-k" "select-pane -t :.+"
+
+bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') = emacsclient ]" "send-keys C-j" "select-pane -t :.-"
+bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') = emacsclient ]" "send-keys C-k" "select-pane -t :.+"
 
 ###############################################################################
 # Navigate panes using ctrl-arrow keys (no prefix)
