Instead of disabling C-h, C-l, C-j, C-k, make it conditional on just vi and emacs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -263,35 +263,25 @@ bind-key "'" choose-window
 bind-key '"' choose-session
 
 ###############################################################################
-# Navigate windows using 'h', 'l'
-#
-# Note: Disabled ctrl-h, ctrl-l (no prefix) to enable emacs from within tmux
-# bind-key -r    C-h   select-window -t :- # cycle left
-# bind-key -r    C-l   select-window -t :+ # cycle right
-#
+# Navigate windows using 'h', 'l', ctrl-h, ctrl-l (no prefix)
 ###############################################################################
 
 bind-key -r    h     select-window -t :- # cycle left
 bind-key -r    l     select-window -t :+ # cycle right
 bind-key Tab         last-window
 
-bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') =~ (vim|emacs*) ]" "send-keys C-h" "select-window -t :.-"
-bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') =~ (vim|emacs*) ]" "send-keys C-l" "select-window -t :.+"
+bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') =~ (vi*|emacs*) ]" "send-keys C-h" "select-window -t :.-"
+bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') =~ (vi*|emacs*) ]" "send-keys C-l" "select-window -t :.+"
 
 ###############################################################################
-# Navigate panes using 'j', 'k'
-#
-# Note: Disabled ctrl-h, ctrl-l (no prefix) to enable emacs from within tmux
-# bind-key -r    C-j   select-pane -t :.-  # cycle counter-clockwise
-# bind-key -r    C-k   select-pane -t :.+  # cycle clockwise
-#
+# Navigate panes using 'j', 'k', ctrl-j, ctrl-k (no prefix)#
 ###############################################################################
 
 bind-key -r    j     select-pane -t :.-  # cycle counter-clockwise
 bind-key -r    k     select-pane -t :.+  # cycle clockwise
 
-bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') =~ (vim|emacs*) ]" "send-keys C-j" "select-pane -t :.-"
-bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') =~ (vim|emacs*) ]" "send-keys C-k" "select-pane -t :.+"
+bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') =~ (vi*|emacs*) ]" "send-keys C-j" "select-pane -t :.-"
+bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') =~ (vi*|emacs*) ]" "send-keys C-k" "select-pane -t :.+"
 
 ###############################################################################
 # Navigate panes using ctrl-arrow keys (no prefix)
