Remove regex, make match more explicit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -270,8 +270,8 @@ bind-key -r    h     select-window -t :- # cycle left
 bind-key -r    l     select-window -t :+ # cycle right
 bind-key Tab         last-window
 
-bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') =~ (vi|vim|emacs|emacsclient) ]" "send-keys C-h" "select-window -t :.-"
-bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') =~ (vi|vim|emacs|emacsclient) ]" "send-keys C-l" "select-window -t :.+"
+bind-key -nr C-h if "[ $(tmux display -p '#{pane_current_command}') =~ vi|vim|emacs|emacsclient ]" "send-keys C-h" "select-window -t :.-"
+bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') =~ vi|vim|emacs|emacsclient ]" "send-keys C-l" "select-window -t :.+"
 
 ###############################################################################
 # Navigate panes using 'j', 'k', ctrl-j, ctrl-k (no prefix)#
@@ -280,8 +280,8 @@ bind-key -nr C-l if "[ $(tmux display -p '#{pane_current_command}') =~ (vi|vim|e
 bind-key -r    j     select-pane -t :.-  # cycle counter-clockwise
 bind-key -r    k     select-pane -t :.+  # cycle clockwise
 
-bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') =~ (vi|vim|emacs|emacsclient) ]" "send-keys C-j" "select-pane -t :.-"
-bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') =~ (vi|vim|emacs|emacsclient) ]" "send-keys C-k" "select-pane -t :.+"
+bind-key -nr C-j if "[ $(tmux display -p '#{pane_current_command}') =~ vi|vim|emacs|emacsclient ]" "send-keys C-j" "select-pane -t :.-"
+bind-key -nr C-k if "[ $(tmux display -p '#{pane_current_command}') =~ vi|vim|emacs|emacsclient ]" "send-keys C-k" "select-pane -t :.+"
 
 ###############################################################################
 # Navigate panes using ctrl-arrow keys (no prefix)
