Properly escape '\' for bind-key as required by tmux 3.0 @see https://github.com/tmux/tmux/issues/1997

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -224,7 +224,7 @@ bind-key ! source-file ~/.tmux.conf \; display-message "Reloaded ~/.tmux.conf"
 
 # Rebind split-window -h
 unbind-key %
-bind-key \ split-window -h
+bind-key "\\" split-window -h
 
 # Rebind split-window -v
 unbind-key '"'
