--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,9 @@
 #
 ########################################################################################
 
+#
 # Always use Github user ID
+#
 [user]
     name             = Paolo de Dios
     email            = paolodedios@gmail.com
@@ -14,19 +16,23 @@
     filemode         = false
     logallrefupdates = true
     excludesfile     = /Users/paolodedios/.gitignore_global
-
+    #
 	# Treat spaces before tabs and all kinds of trailing whitespace as an error
 	# [default] trailing-space   : looks for spaces at the end of a line
 	# [default] space-before-tab : looks for spaces before tabs at the beginning of a line
+    #
 	whitespace       = space-before-tab,-indent-with-non-tab,trailing-space
-
+    #
 	# Make `git rebase` safer on OS X
 	# @see http://www.git-tower.com/blog/make-git-rebase-safe-on-osx
+    #
 	trustctime       = false
 	editor           = vim
 
 [apply]
+    #
     # Detect whitespace errors when applying a patch
+    #
     whitespace       = fix
 
 [color]
@@ -35,14 +41,31 @@
    interactive       = auto
    status            = auto
 
+[pull]
+    #
+    # Pulling without specifying how to reconcile divergent branches is
+    # discouraged.
+    #
+    # pull.rebase false  # merge (the default strategy)
+    # pull.rebase true   # rebase
+    # pull.ff only       # fast-forward only
+    #
+    rebase           = false
+
 [push]
+    #
     # Change to match those with older versions of git 1.x.x
+    #
     default          = simple
 
 [merge]
+    #
 	# Include summaries of merged commits in newly created merge commit messages
+    #
 	log              = true
 
 [diff]
+    #
 	# Detect copies as well as renames
+    #
 	renames          = copies
