Fixed comment block

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -274,7 +274,7 @@ bind-key -nr C-h if "[[ $(tmux display -p '#{pane_current_command}') =~ vi|vim|e
 bind-key -nr C-l if "[[ $(tmux display -p '#{pane_current_command}') =~ vi|vim|emacs|emacsclient ]]" "send-keys C-l" "select-window -t :.+"
 
 ###############################################################################
-# Navigate panes using 'j', 'k', ctrl-j, ctrl-k (no prefix)#
+# Navigate panes using 'j', 'k', ctrl-j, ctrl-k (no prefix)
 ###############################################################################
 
 bind-key -r    j     select-pane -t :.-  # cycle counter-clockwise
